# RAGuardianNews

./: .gitignore  FinalReport.ipynb  README.md  articles.csv  guardian_articles.duckdb  main.py  pyproject.toml  streamlit_app.py  test.txt
Experimentation and QC/: plots.ipynb  qc.ipynb
analysis/: measures_analysis.ipynb  metadata_analysis.ipynb
data/: raw_articles_2024-02-15_to_2026-02-14.json
dbt_guardian/: dbt_project.yml
dbt_guardian/models/: cleaned_articles.sql  cleaned_articles.yml  sample_articles.sql  sample_articles.yml  sources.yml
eda/: eda_analysis.ipynb  metadata_analysis.ipynb
nlp_pipeline/: NLP_PIPELINE_README.MD  README_RAG.md  config.py  db.py  embed.py  faiss_index.py  label_topics.ipynb  merge_results_topicmodels.py  ner_analysis.ipynb  ner_bert.py  ner_spacy.py  rag.py  rag_dbchecks.ipynb  retrieval.py  review_pipeline.ipynb  run_experiments.py  run_outlier_topics.py  run_pipeline.py  topic_model.py  version_models.py
nlp_pipeline/NER/: ner_analysis.ipynb  ner_bert.py  ner_checks.ipynb
nlp_pipeline/models/bertopic_model/: ctfidf_config.json  topics.json
nlp_pipeline/models/bertopic_model_v1/: topic_embeddings.safetensors  topics.json
nlp_pipeline/models/bertopic_outliers/: ctfidf_config.json  topic_embeddings.safetensors  topics.json
reports/: DataExploration.html  DataExploration.ipynb  df(2).csv  df.csv
scripts/: ingest_articles.py  ingest_articles_multiplesearch.py  load.py  table_checks.ipynb  test_ingest_articles.py  test_viewtables.py
scripts/deprecated_scripts/: transform.py
(+11 files in other folders)
